--- a/portfolio.html
+++ b/portfolio.html
@@ -9,42 +9,45 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
         <link rel="stylesheet" href="./css/styles.css" />
     
 </head>
 <header class="header">
-    <nav class="header-nav">
-        <a class="logo-web"
-        href="./index.html">Web
-        <span class="logo-studio"> Studio </span></a>
-        <ul class="list">
-            <li>
-                <a class="nav-list"
-                href="./index.html">Studio</a>
-            </li>
-            <li >
-                <a class="nav-list"
-                href="./portfolio.html">Portfolio</a>
-            </li>
-            <li>
-                <a class="nav-list"
-                href="">Contacts</a>
-            </li>
-        </ul>    
-    </nav>
-    <address class="header-contacts">
-        <ul class="list">
-        <li>
-            <a class="adress-list"
-            href="mailto:info@devstudio.com"target="_blank">info@devstudio.com
-             </a>
-        </li>
-        <li>
-            <a class="adress-list"
-        href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
-        </ul>
-    </address>
-</header>
+    <div class="header-container container">
+     <nav class="header-nav">
+         <a class="logo-web"
+         href="./index.html">Web
+         <span class="logo-studio"> Studio </span></a>
+         <ul class="header-list list">
+             <li class="header-list-li">
+                 <a class="nav-list"
+                 href="./index.html">Studio</a>
+             </li>
+             <li class="header-list-li">
+                 <a class="nav-list"
+                 href="./portfolio.html">Portfolio</a>
+             </li>
+             <li class="header-list-li">
+                 <a class="nav-list"
+                 href="">Contacts</a>
+             </li>
+         </ul>  
+     </nav>
+         <address class="header-contacts">
+             <ul class="list adress-header">
+             <li>
+                 <a class="adress-list"
+                 href="mailto:info@devstudio.com"target="_blank">info@devstudio.com
+                 </a>
+             </li>
+             <li>
+                 <a class="adress-list"
+             href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+             </ul>
+         </address>
+     </div>
+ </header>
     <main class="main-portfolio">
         <h1 class="title-portfolio">Filters</h1>
         <ul class="list">
