--- a/index.html
+++ b/index.html
@@ -9,50 +9,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Studio</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
+    <link rel="stylesheet" href="/css/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
     <header class="header">
+       <div class="header-container container">
         <nav class="header-nav">
             <a class="logo-web"
             href="./index.html">Web
             <span class="logo-studio"> Studio </span></a>
-            <ul class="list">
-                <li>
+            <ul class="header-list list">
+                <li class="header-list-li">
                     <a class="nav-list"
                     href="./index.html">Studio</a>
                 </li>
-                <li >
+                <li class="header-list-li">
                     <a class="nav-list"
                     href="./portfolio.html">Portfolio</a>
                 </li>
-                <li>
+                <li class="header-list-li">
                     <a class="nav-list"
                     href="">Contacts</a>
                 </li>
-            </ul>    
+            </ul>  
         </nav>
-        <address class="header-contacts">
-            <ul class="list">
-            <li>
-                <a class="adress-list"
-                href="mailto:info@devstudio.com"target="_blank">info@devstudio.com
-                 </a>
-            </li>
-            <li>
-                <a class="adress-list"
-            href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
+            <address class="header-contacts">
+                <ul class="list adress-header">
+                <li>
+                    <a class="adress-list"
+                    href="mailto:info@devstudio.com"target="_blank">info@devstudio.com
+                    </a>
+                </li>
+                <li>
+                    <a class="adress-list"
+                href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
+        </div>
     </header>
     <main class="main">
         <section class="title-section">
+            <div>
         <h1 class="title">Effective Solutions for Your Business</h1>
         <button type="button" class="button-studio">Order Service</button>
-        </section>
+            </div>
+         </section>
         <!-- Our benefits section -->
-        <section class="benefits-section">
-            <h2>Advantages!</h2>
+        <section class="benefits benefits-section">
+            <div class="container">
+            <h2 class="ben-container">Advantages!</h2>
             <ul class="list">
                 <li class="benefits-list">
                     <h4 class="features">Strategy</h4>
@@ -79,9 +85,11 @@
                     Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                 </p>
             </ul>
+            </div>
         </section >
         <!--What are we doing section -->
         <section class="work-section">
+           <div>
             <h2 class="work-title">What are we doing</h2>
             <ul class="list">
                 <li class="work-list">
@@ -100,10 +108,12 @@
                     width="360">
                 </li>
             </ul>
+        </div> 
         </section>
         <!-- Our team sectiom-->
         <section class="team-section">
-            <h2 class="team-title">Our team</h2>
+           <div>
+             <h2 class="team-title">Our team</h2>
             <ul class="list">
                 <li class="team-list">
                     <img src="./images/mark.jpg"
@@ -134,15 +144,18 @@
                     <p class="position">UI Designer</p>
                 </li>
             </ul>
+        </div>
         </section>
     </main>
     <footer class="footer">
+        <div>
         <a class="logo-footer-web"
             href="./index.html">Web
             <span class="logo-footer-studio">Studio</span></a>
             <p class="citation">
                 Increase the flow of customers and sales for your business with digital marketing & growth solutions.
             </p>
+        </div>
     </footer>
 </body>
 </html>
