--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
     <main class="main">
         <section class="title-section">
             <div>
-        <h1 class="title">Effective Solutions for Your Business</h1>
+        <h1 class="title solutions-flex">Effective Solutions for Your Business</h1>
         <button type="button" class="button-studio">Order Service</button>
             </div>
          </section>
         <!-- Our benefits section -->
         <section class="benefits benefits-section">
             <div class="container">
-            <h2 class="ben-container">Advantages!</h2>
-            <ul class="list">
+            <h2 class="ben-container visually-hidden">Advantages!</h2>
+            <ul class="list list-flex">
                 <li class="benefits-list">
                     <h4 class="features">Strategy</h4>
                     <p class="about-features">
@@ -80,10 +80,10 @@
                 </li>
                 <li class="benefits-list">
                     <h4 class="features">Technologies</h4>
-                </li>
                     <p class="about-features"> 
                     Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                 </p>
+            </li>
             </ul>
             </div>
         </section >
