--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="header-nav">
             <a class="logo-web"
             href="./index.html">Web
-            <span class="logo-studio"> Studio </span></a>
+            <span class="logo-studio">Studio</span></a>
             <ul class="header-list list">
                 <li class="header-list-li">
                     <a class="nav-list"
@@ -38,12 +38,12 @@
                 <ul class="list adress-header">
                 <li>
                     <a class="adress-list"
-                    href="mailto:info@devstudio.com"target="_blank">info@devstudio.com
+                    href="mailto:info@devstudio.com" target="_blank">info@devstudio.com
                     </a>
                 </li>
                 <li>
                     <a class="adress-list"
-                href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+                href="tel:+110001111111">+11 (000) 111-11-11</a></li>
                 </ul>
             </address>
         </div>
@@ -65,8 +65,8 @@
                     <p class="about-features">
                         Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
-                </li class="benefits-list">
-                <li>
+                </li >
+                <li class="benefits-list">
                     <h4 class="features">Punctuality</h4>
                     <p class="about-features">
                         Bring the key message to the brand's audience for the best price within the shortest possible time.
@@ -89,21 +89,23 @@
         </section >
         <!--What are we doing section -->
         <section class="work-section">
-           <div>
-            <h2 class="work-title">What are we doing</h2>
-            <ul class="list">
+           <div class="container">
+            <h2 class="work-title">
+                What are we doing
+            </h2>
+            <ul class="list list-work">
                 <li class="work-list">
-                    <img src="./images/work 1.jpg" 
+                    <img src="./images/work1.jpg" 
                     alt="keyboard"
                     width="360">
                 </li>
                 <li class="work-list">
-                    <img src="./images/work 2.jpg"
+                    <img src="./images/work2.jpg"
                     alt="Comfortable laptop"
                     width="360">
                 </li>
                 <li class="work-list">
-                    <img src="./images/work 3.jpg"
+                    <img src="./images/work3.jpg"
                     alt="Range of colours"
                     width="360">
                 </li>
@@ -112,43 +114,53 @@
         </section>
         <!-- Our team sectiom-->
         <section class="team-section">
-           <div>
-             <h2 class="team-title">Our team</h2>
-            <ul class="list">
+           <div class="container">
+             <h2 class="team-title">
+                Our team
+            </h2>
+            <ul class="list list-comand">
                 <li class="team-list">
                     <img src="./images/mark.jpg"
                     alt="Worker 1 with brown hair"
                     width="264">
-                    <h3 class="names">Mark Guerrero</h3>
-                    <p class="position">Product Designer</p>
+                    <div class="first-worker">
+                        <h3 class="names">Mark Guerrero</h3>
+                        <p class="position">Product Designer</p>
+                    </div>
                 </li>
                 <li  class="team-list">
                     <img src="./images/Tom.jpg"
                     alt="Blond worker"
                     width="264">
+                    <div class="first-worker">
                     <h3 class="names">Tom Ford</h3>
                     <p class="position">Frontend Developer</p>
+                    </div>
                 </li>
                 <li  class="team-list">
                     <img src="./images/camila.jpg"
                     alt="worker women"
                     width="264">
+                    <div class="first-worker">
                     <h3 class="names">Camila Garcia</h3>
                     <p class="position">Marketing</p>
+                    </div>
                 </li>
                 <li  class="team-list">
                     <img src="./images/daniel.jpg"
                     alt="worker 4 man smiling"
                     width="264">
+                    <div class="first-worker">
                     <h3 class="names">Daniel Wilson</h3>
                     <p class="position">UI Designer</p>
+                    </div>
                 </li>
             </ul>
         </div>
         </section>
     </main>
     <footer class="footer">
-        <div>
+        <div class="container">
         <a class="logo-footer-web"
             href="./index.html">Web
             <span class="logo-footer-studio">Studio</span></a>
