--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="./css/styles.css" />
     
 </head>
+<body>
 <header class="header">
     <div class="header-container container">
      <nav class="header-nav">
@@ -49,25 +50,28 @@
      </div>
  </header>
     <main class="main-portfolio">
-        <h1 class="title-portfolio">Filters</h1>
-        <ul class="list">
-            <li>
+       <section class="buttons-div">
+        <div class="container">
+         <h1 class="title-portfolio visually-hidden">Filters</h1>
+        <ul class="list list-portfolio">
+            <li class="button-li">
                 <button class="button-filtres">All</button>
             </li>
-            <li>
+            <li class="button-li">
                 <button class="button-filtres">Web Site</button>
             </li>
-            <li>
+            <li class="button-li">
                 <button class="button-filtres">App</button>
             </li>
-            <li>
+            <li class="button-li">
                 <button class="button-filtres">Design</button>
             </li>
-            <li>
+            <li class="button-li">
                 <button class="button-filtres">Marketing</button>
             </li>
         </ul>
-        <ul class="list">
+    
+        <ul class="list-captures list ">
             <li >
                 <a href="./index.html" class="link">
                 <img src="./images/Banking App Interface Concept.jpg" 
@@ -150,13 +154,19 @@
                 <p class="card-profit">Web Site</p>
             </li>
         </ul>
+    </section>
+</div>
     </main>
     <footer class="footer">
+        <div class="container">
         <a class="logo-footer-web"
             href="./index.html">Web
             <span class="logo-footer-studio">Studio</span></a>
             <p class="citation">
                 Increase the flow of customers and sales for your business with digital marketing & growth solutions.
             </p>
+        </div>
     </footer>
+</body>
+</html>
    
